--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="cards">Cards</string>
     <string name="amiibo_logo">Amiibo Logo</string>
     <string name="version">v.0.0.1</string>
+    <string name="amiibo_name">amiibo_name</string>
 
 
 </resources>
